--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=b02
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/bootdb
+spring.datasource.url=jdbc:mariadb://localhost:3306/b02
 spring.datasource.username=root
 spring.datasource.password=1234
 
