--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,8 @@ dependencies {
             "jakarta.annotation:jakarta.annotation-api",
             "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta")
 
+    implementation 'org.modelmapper:modelmapper:3.1.0'
+
 
 }
 
